--- a/templates/index.html
+++ b/templates/index.html
@@ -175,18 +175,22 @@ a{color:inherit;text-decoration:none}
 				</div>
 				
 				<div class="group">
-					<input type="submit" class="button" value="View us on Github">
+					<a href="https://github.com/khanfarhan10/VaccineAvailabilityNotifier"><input type="submit" class="button" value="View us on Github"></a>
 				</div>
 			</div>
+			<form action="" method="post" name="movie_edit">
 			<div class="sign-up-htm">
 				<div class="group">
 					<label for="user" class="label">User Email</label>
-					<input id="user" type="text" class="input">
+					<input id="user" type="text" name="emailid" class="input">
 				</div>
                 <!-- Drop Down -->
 				<div class="group">
-					<label for="pass" class="label">District ID</label>
-					<input id="pass" type="text" class="input" data-type="password">
+					<label for="pass" class="label">District ID &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+						&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
+						&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+						&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<a href="#">Find Your DistrictID?</a></label>
+					<input id="pass" type="text" name="districtid" class="input" data-type="password">
 				</div>
 				<div class="group">
 					<label for="pass" class="label">Age</label>
@@ -204,6 +208,7 @@ a{color:inherit;text-decoration:none}
 				<div class="group">
 					<input type="submit" class="button" value="Register for Emails">
 				</div>
+			</form>
 				
 			</div>
 		</div>
