--- a/templates/index.html
+++ b/templates/index.html
@@ -178,7 +178,7 @@ a{color:inherit;text-decoration:none}
 					<a href="https://github.com/khanfarhan10/VaccineAvailabilityNotifier"><input type="submit" class="button" value="View us on Github"></a>
 				</div>
 			</div>
-			<form action="" method="post" name="movie_edit">
+			<form action="/register" method="post" name="movie_edit">
 			<div class="sign-up-htm">
 				<div class="group">
 					<label for="user" class="label">User Email</label>
@@ -190,23 +190,23 @@ a{color:inherit;text-decoration:none}
 						&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
 						&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
 						&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<a href="#">Find Your DistrictID?</a></label>
-					<input id="pass" type="text" name="districtid" class="input" data-type="password">
+					<input id="pass" type="text" name="districtid" class="input" >
 				</div>
 				<div class="group">
 					<label for="pass" class="label">Age</label>
-					<input id="pass" type="text" class="input" data-type="password">
+					<input id="pass" type="text" name="age" class="input">
 				</div>
 				<div class="group">
 					<label for="pass" class="label">Number of Days</label>
-					<input id="pass" type="text" class="input">
+					<input id="pass" type="text" name="days" class="input">
 				</div>
                 <div class="group">
-                    <input id="check" type="checkbox" class="check" checked>
+                    <input id="check" type="checkbox" name="conds" class="check" checked>
                     <label for="check"><span class="icon"></span> Accept to <a href="#">Terms & Conditions</a> and Register for
                         Updates</label>
                 </div>
 				<div class="group">
-					<input type="submit" class="button" value="Register for Emails">
+					<input type="submit" name="register" class="button" value="Register for Emails">
 				</div>
 			</form>
 				
