complete app with db

--- a/templates/index.html
+++ b/templates/index.html
@@ -189,7 +189,7 @@ a{color:inherit;text-decoration:none}
 					<label for="pass" class="label">District ID &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
 						&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
 						&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-						&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<a href="#">Find Your DistrictID?</a></label>
+						&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<a href="https://github.com/khanfarhan10/VaccineAvailabilityNotifier/blob/main/README.md#district-codes">Find Your DistrictID?</a></label>
 					<input id="pass" type="text" name="districtid" class="input" >
 				</div>
 				<div class="group">
@@ -202,7 +202,7 @@ a{color:inherit;text-decoration:none}
 				</div>
                 <div class="group">
                     <input id="check" type="checkbox" name="conds" class="check" checked>
-                    <label for="check"><span class="icon"></span> Accept to <a href="#">Terms & Conditions</a> and Register for
+                    <label for="check"><span class="icon"></span> Accept to <a href="https://github.com/khanfarhan10/VaccineAvailabilityNotifier/blob/main/README.md#terms--conditions">Terms & Conditions</a> and Register for
                         Updates</label>
                 </div>
 				<div class="group">
