--- a/templates/index.html
+++ b/templates/index.html
@@ -189,7 +189,7 @@ a{color:inherit;text-decoration:none}
 					<label for="pass" class="label">District ID &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
 						&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
 						&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-						&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<a href="https://github.com/khanfarhan10/VaccineAvailabilityNotifier/blob/main/README.md#district-codes">Find Your DistrictID?</a></label>
+						&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<a href="https://github.com/khanfarhan10/VaccineAvailabilityNotifier/blob/main/district_data.csv">Find Your DistrictID?</a></label>
 					<input id="pass" type="text" name="districtid" class="input" >
 				</div>
 				<div class="group">
