--- a/templates/index.html
+++ b/templates/index.html
@@ -169,7 +169,9 @@ a{color:inherit;text-decoration:none}
 					<br>
 					<p style="color:white;"><i>Get notified (via email) regarding the COVID Vaccine availability in your area</i></p>
 					<br>
-                    <p style="color:white;"><b><u>Project Description</b></u></p>
+                    <p style="color:white;"><a href="https://github.com/khanfarhan10/VaccineAvailabilityNotifier/blob/main/README.md#developer-credits">&lt; &gt;<b> by :</b></a></p>
+					<p style="color:white;"><b><a href="https://github.com/Swayms-stack">Swayamshree Mohanty</a></b></p>
+					<p style="color:white;"><b><a href="https://github.com/khanfarhan10">Farhan Hai Khan</a></b></p>
 					<br>
                     </center>
 				</div>
